--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,17 @@ a:hover,a:focus{
 	text-decoration: none;
 }
 /*header*/
-/*header{
+header{
 	position: fixed;
 	left: 0;
 	right: 0;
 	top: 0;
 	z-index: 10000;
-}*/
+	/*padding: 1% 0%;*/
+}
+header a{
+	font-size: 16px;
+}
 .navbar{
 	margin-bottom: 0px;
 	border-radius: 0px;
@@ -36,16 +40,9 @@ a:hover,a:focus{
 	color: #ccc!important;
 }
 /*hero*/
-/*.hero-image{
-	width: 100%;
-	height:100%;
-	background: url("../img/hero.jpg") center;
-	background-size: 100% 100%;
-	color: #fff;
-}*/
 .hero{
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 }
 .hero .row{
 	margin: 0px;
@@ -54,6 +51,12 @@ a:hover,a:focus{
 .hero .col-xs-12{
 	padding: 0px;
 }
+.hero .media-heading{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 42px;
+	color: #fff;
+	font-weight: 600;
+}
 .bg-dark{
 	width: 100%;
 	height: 100%;
@@ -61,6 +64,7 @@ a:hover,a:focus{
 	position: absolute;
 }
 .phase{
+	padding: 30% 0% 5% 5%;
 	height: 400px;
 	background-color: #ED6866;
 }
