--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ header a{
 /*hero*/
 .hero{
 	width: 100%;
-	/*height: 100%;*/
+	height: 100%;
 }
 .hero .row{
 	margin: 0px;
@@ -50,6 +50,7 @@ header a{
 .hero .col-sm-6,
 .hero .col-xs-12{
 	padding: 0px;
+	/*height: 100%;*/
 }
 .hero .media-heading{
 	font-family: 'Montserrat', sans-serif;
@@ -76,12 +77,23 @@ header a{
 .about-me{
 	padding: 5% 0%;
 	font-family: 'Roboto', sans-serif;
+	background-color: #EDEDED;
 }
 .about-me img{
 	border-radius: 100%;
 }
 .about-me h3{
 	font-family: 'Merienda One', cursive !important;
+}
+.about-me .linea{
+	border: 1px solid #ccc;
+	display: inline-block;
+	width: 15%;
+	margin-bottom: 6px;
+}
+.about-me i{
+	font-size: 2em;
+	color: #bababa;
 }
 .about-me .description{
 	padding: 0% 10%;
@@ -98,3 +110,52 @@ header a{
 /*.portfolio h2{
 	font-weight: 700;
 }*/
+input, textarea {
+	width:100%;
+	height:48px;
+	border:1px solid #E2E0E0;
+	padding:6px;
+	margin:1% 0%;
+	font-size:1em;
+	color:black;
+}
+textarea {
+	height:126px;	
+}
+
+#submit{
+	color: white;
+	width:100%;
+	height:48px;
+	border:none;
+	margin:1% 0%;
+	cursor:pointer;
+	background-color: #EF7674;
+	border-radius: 2px;
+}
+#submit:hover{
+	background-color: #fff;
+	color: #EF7674;
+	border: 2px solid #EF7674;
+}
+#nombre{
+   background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+    padding: 5px 5px 5px 25px;
+    background-size: 34px 17px;
+    background-position: -5px 14px;
+    background-repeat: no-repeat;
+}
+#email{
+	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+    padding: 5px 5px 5px 25px;
+    background-size: 34px 17px;
+    background-position: -4px 16px;
+    background-repeat: no-repeat;
+}
+#mensaje{
+	    background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
+	    padding: 5px 5px 5px 25px;
+	    background-size: 34px 17px;
+        background-position: -5px 6px;
+        background-repeat: no-repeat;
+}
