--- a/css/main.css
+++ b/css/main.css
@@ -32,26 +32,26 @@ header a{
 .navbar-default{
 	border: none;
 }
+.navbar-default .navbar-brand{
+	color: #fff;
+}
 .navbar-toggle:focus,
 .navbar-toggle:hover,
 .navbar-default{
-	background-color: #fff !important;
+	background-color: #FF7D5D !important;
 }
 .active{
 	color: #ccc!important;
 }
 /*hero*/
-.hero{
+.hero-image{
 	width: 100%;
+	height:100%;
+	background: url("../img/hero.jpg") center;
+	background-size: 100% 100%;
+	color: #fff;
 }
-.hero .row{
-	margin: 0px;
-}
-.hero .col-sm-6,
-.hero .col-xs-12{
-	padding: 0px;
-}
-.hero .media-heading{
+.hero h1{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 42px;
 	color: #fff;
@@ -60,13 +60,30 @@ header a{
 .bg-dark{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0);
 	position: absolute;
 }
 .phase{
-	padding: 200px 0% 5% 5%;
-	height: 400px;
-	background-color: #ED6866;
+	padding-top: 25% ;
+}
+.phase a{
+	padding: 1% 20px;
+	display: inline-block;
+	background-color: #FF7D5D;
+	color: #fff;
+	border: 2px solid #fff;
+	margin-top: 2%;
+}
+.phase a:hover{
+	background-color: #fff;
+	color: #FF7D5D;
+	border: 2px solid #FF7D5D;
+	transition: 0.5s;
+}
+.hero-image i{
+	font-size: 33px;
+	color: #fff;
+	padding-top: 8%;
 }
 .slider{
 	height: 400px;
