--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body,html{
 	width: 100%;
 	height: 100%;
-	font-family: 'Merienda One', cursive;
+	font-family: 'Hind', sans-serif;
 	color: #524A53;
 }
 a{
@@ -20,7 +20,7 @@ header{
 	right: 0;
 	top: 0;
 	z-index: 10000;
-	/*padding: 1% 0%;*/
+	font-weight: 700;
 }
 header a{
 	font-size: 16px;
@@ -32,15 +32,25 @@ header a{
 .navbar-default{
 	border: none;
 }
+.navbar-default a{
+	color: #fff;
+}
 .navbar-default .navbar-brand{
 	color: #fff;
+}
+.navbar-nav a{
+	color: #fff !important;
+}
+.nav a:hover{
+	color: #EF7674;
 }
 .navbar-toggle:focus,
 .navbar-toggle:hover,
 .navbar-default{
-	background-color: #FF7D5D !important;
+	background-color:  transparent !important;
+	color: #fff ;
 }
-.active{
+.active {
 	color: #ccc!important;
 }
 /*hero*/
@@ -97,7 +107,8 @@ header a{
 }
 .about-me h2,
 .skill h2{
-	font-family: 'Handlee', cursive;
+	font-family: 'Montserrat', sans-serif;
+	/*font-family: 'Handlee', cursive;*/
 }
 .about-me img{
 	border-radius: 100%;
@@ -127,6 +138,9 @@ header a{
 }
 .skill{
 	padding-top: 5%;
+}
+.skill img{
+	width: 	60%;
 }
 .portfolio{
 	padding: 5% 0%;
