--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,49 @@ a:hover,a:focus{
 	text-decoration: none;
 }
 /*header*/
-header{
+nav{
+	padding: 10px 5%;
+}
+.icon-bar{
+	background-color: #ffffff;
+}
+.nav-bar{
+	position: fixed;
+	padding-top: 2%;
+}
+.navbar-nav {
+	background-color: transparent;
+	padding-top: 10px;
+}
+.nav li a{
+	color: rgba(255, 255, 255, 0.8);
+	padding: 7px 5px;
+	margin: 0 15px;
+	font-size: 22px;
+}
+.active{
+	background-color: rgba(255, 255, 255, 0.2) !important;
+	border-radius: 5px;	
+}
+.active li a{
+	color: 	white !important;
+}
+.nav>li>a:hover{
+	color: #ffffff;
+	/*transition:0.3s;*/
+	background-color: transparent;
+}
+.navbar-brand:hover{
+	opacity: 0.8;
+	transition:0.5s;
+	color: white;
+}
+.navbar-header a{
+	font-size: 1.9em;
+	color: #fff;
+}
+/*header*/
+/*header{
 	width: 100%;
 	position: fixed;
 	left: 0;
@@ -42,7 +84,7 @@ header a{
 .navbar-default{
 	background-color: rgba(255,0,0,0.3) !important;
 	border: none;
-}
+}*/
 /*hero*/
 .hero-image{
 	width: 100%;
@@ -60,7 +102,7 @@ header a{
 .bg-dark{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(0,0,0,0.5);
 	position: absolute;
 }
 .phase{
